[package]
name = "atlas-default-configs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
thiserror = "2"

serde = { version = "1", features = ["derive"] }
atlas-common = { path = "../../Atlas-Common", features = ["serialize_serde"] }
atlas-communication = { path = "../../Atlas-Communication", features = ["serialize_serde"] }
atlas-reconfiguration = { path = "../../Atlas-Reconfiguration", features = ["serialize_serde"] }
atlas-comm-mio = { path = "../../Atlas-Comm-MIO" }
atlas-metrics = { path = "../../Atlas-Metrics" }
rustls = "0"
rustls-pemfile = "2"
config = "0.15.7"
regex = "*"