[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13"
ring = { version = "0.17", features = ["default"] }
rcgen = "0.11.3"
anyhow = { version = "1.0.52", features = [] }
serde = "1.0"
clap = { version = "4.4.8", features = ["derive"] }
scoped_threadpool = "0.1.9"
openssl = "0.10"