[package]
name = "keygen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = { version = "0", features = ["default"] }
anyhow = { version = "1", features = [] }
clap = { version = "4", features = ["derive"] }
scoped_threadpool = "0"
openssl = "0"